src/Pages/ChatView/payment.css
/* Popup container */
.popup {
  display: none;
  cursor: pointer;
  width: 100%;
  text-align: center;
  border-radius: 20px 20px 0 0;
  position: absolute;
  z-index: 100;
  bottom: 0;
  padding: 20px;
}

/* Toggle this class when clicking on the popup container (hide and show the popup) */
.show {
  display: block;
}
.save-btn:active{
  transform: scale(0.95);
}

